'gradle uploadArchives' to install to local maven

--- a/distributed-ui/build.gradle
+++ b/distributed-ui/build.gradle
@@ -49,3 +49,14 @@ dependencies {
     compile 'net.sourceforge.streamsupport:streamsupport-flow:1.5.6'
     compile 'net.sourceforge.streamsupport:streamsupport-literal:1.5.6'
 }
+
+apply plugin: 'maven'
+
+group = 'com.erhannis'
+version = '1.0'
+
+uploadArchives {
+    repositories {
+        mavenLocal()
+    }
+}
