--- a/distributed-ui/build.gradle
+++ b/distributed-ui/build.gradle
@@ -1,10 +1,9 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "com.erhannis.android.distributeduitest"
         minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
@@ -52,7 +51,7 @@ dependencies {
 
 apply plugin: 'maven'
 
-group = 'com.erhannis'
+group = 'com.erhannis.android'
 version = '1.0'
 
 uploadArchives {
