--- a/distributed-ui/build.gradle
+++ b/distributed-ui/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.1'
-    compile 'eu.hgross:blaubot-android:2.+'
+    api 'eu.hgross:blaubot-android:2.0.0-beta.2'
     compile 'com.esotericsoftware.kryo:kryo:2.23-SNAPSHOT'
     compile 'net.sourceforge.streamsupport:streamsupport:1.5.6'
     compile 'net.sourceforge.streamsupport:streamsupport-cfuture:1.5.6'
